--- a/index.html
+++ b/index.html
@@ -9,35 +9,64 @@
 
 <body>
     <header>
-       <h1>portafolio imagen escrita</h1>  
-    </header>
-   
+       <h1>Bienvenidos a mi portafolio</h1> 
+   </header>
+   <div class="rectangulo">
+      <div class="contenido">
+          <div class="imagen-con-texto">
+              <div class="imagen">
+                  <img src="imagenes/T0.JPG" width="250" height="250">
+              </div>
+              <div class="texto">
+                  <p>Hola! Soy Valentina Maldonado, alumna de la Escuela de Arquitectura y Diseño de la PUCV, a la cual ingrese en 2023. A día de hoy formo parte del Taller Imagen Escrita 2023. 
+                     <p>En el cual nos encontramos en una aventura con HTML y sus elementos, todo esto conjunto a la compañía de ChatGPT, el editor de P5JS y Github.</p>
+                     <p>Sientete en la libertad de revisar un poco de mi portafolio donde muestro las entregas del taller :)</p>
+                  <div class="contenedor">
+                      <a href="https://wiki.ead.pucv.cl/Valentina_Maldonado" class="enlace">Wikicasiopea</a>
+                      <a href="https://github.com/ValeeMaldonado/Portafolio_Valentina_Maldonado" class="enlace">Código Github</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+  
     <div class="gallery-container">
-        <div class="gallery__item">
-            <img src="imagenes/T1.png" alt=""class="gallery__img">
-            <h2 class="gallery__title"> Tarea 1</h2>
-         </div>
          <div class="gallery__item">
-            <img src="imagenes/T2.png" alt=""class="gallery__img">
-            <h2 class="gallery__title"> Tarea 2</h2>
-         </div>
-         <div class="gallery__item">
-            <img src="imagenes/T3.png" alt=""class="gallery__img">
-            <h2 class="gallery__title"> Tarea 3</h2>
-         </div> 
-         <div class="gallery__item">
-            <img src="imagenes/T4.png" alt=""class="gallery__img">
-            <h2 class="gallery__title"> Tarea 4</h2>
-         </div>
-         <div class="gallery__item">
-            <img src="imagenes/T5.png" alt=""class="gallery__img">
-            <h2 class="gallery__title"> Tarea 5</h2>
-         </div>
-         <div class="gallery__item">
-            <img src="imagenes/T6.png" alt=""class="gallery__img">
-            <h2 class="gallery__title"> Tarea 6</h2>
-         </div>
-        
+            <a href="Tarea 1/Tarea1.html">
+                <img src="imagenes/T1.png" alt="" class="gallery__img">
+                <h2 class="gallery__title">Tarea 1</h2>
+            </a>
+        </div>
+   <div class="gallery__item">
+         <a href="Tarea 2/Tarea2.html">
+             <img src="imagenes/T2.png" alt="" class="gallery__img">
+             <h2 class="gallery__title">Tarea 2</h2>
+         </a>
+     </div>
+   <div class="gallery__item">
+      <a href="Tarea 3/Tarea3.html">
+          <img src="imagenes/T3.png" alt="" class="gallery__img">
+          <h2 class="gallery__title">Tarea 3</h2>
+      </a>
+      </div>
+      <div class="gallery__item">
+         <a href="Tarea 4/Tarea4.html">
+             <img src="imagenes/T4.png" alt="" class="gallery__img">
+             <h2 class="gallery__title">Tarea 4</h2>
+         </a>
+     </div>
+     <div class="gallery__item">
+      <a href="Tarea 5/Tarea5.html">
+          <img src="imagenes/T5.png" alt="" class="gallery__img">
+          <h2 class="gallery__title">Tarea 5</h2>
+      </a>
+  </div>
+    <div class="gallery__item">
+   <a href="Tarea 6/Tarea6.html">
+       <img src="imagenes/T6.png" alt="" class="gallery__img">
+       <h2 class="gallery__title">Tarea 6</h2>
+   </a>
+</div>
          </div>
 
 
